<resources>
    <string name="app_name">feelMe</string>
    <string name="action_settings" translatable="true">Parametres</string>
    <string name="non_empty_query" translatable="true">Veillez saisir votre texte</string>
    <string name="MessageVocalGuide">Veuillez parler...</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_speak">Parler</string>
    <string name="btn_preference">Préférences d\'activités</string>
    <string name="btn_user">Infos Utilisateur</string>
    <string name="btn_setting">Réglages</string>
    <string name="btn_Notification">Notification</string>
    <string name="btn_feelMe">" Feelme"</string>
    <string name="btn_preCancel">Annuler</string>
    <string name="btn_userSave">Enregister</string>
    <string name="label_params">Parametres</string>
    <string name="message_no_connexion">Pas de connexion</string>
    <string name="message_connexion">Connexion etablie</string>
    <string name="tapeMessage">Saisissez votre texte...</string>
    <string name="hintuserName">Nom</string>
    <string name="hintUserSex">Sexe</string>
    <string name="hintUserEmail">Email</string>
    <string name="hintUserAge">Age</string>
    <string name="titlePersonalInfo">Informations Personnelles</string>
    <string name="action_confidentiality">Confidentialité</string>


    <string name="pref11">Normal</string>
    <string name="pref12">Handicapé</string>
    <string name="pref13">Sportif</string>
    <string name="pref14">Enceinte</string>
    <string name="pref15">Malade Mental</string>
    <string name="pref16">Malade permanent</string>

    <string name="pref21"> Billard</string>
    <string name="pref22"> babyfoot</string>
    <string name="pref23">ping pong</string>
    <string name="pref24">self workout</string>
    <string name="pref25">Lecture</string>

    <string name="pref31">Ballade</string>
    <string name="pref32">Reflexion au bord de l\'eau n\'est pas mal</string>
    <string name="pref33">Jeu au casino</string>
    <string name="pref34">Yoga</string>
    <string name="pref35">Prier</string>
    <string name="pref36">bibliothèque</string>

    <string name="pref41">basket ball</string>
    <string name="pref42"> football</string>
    <string name="pref43"> volley ball</string>
    <string name="pref44"> handball</string>
    <string name="pref45"> natation</string>
    <string name="pref46"> tennis</string>
    <string name="pref47"> zumba</string>
    <string name="pref48"> rock</string>
    <string name="pref49"> drift</string>
    <string name="pref40"> karting</string>

    <string name="pref51">Jeu</string>
    <string name="pref52">Internet</string>
    <string name="pref53">Causette</string>

    <string name="pref61">Boire</string>
    <string name="pref62">Prendre l\'air</string>
    <string name="pref63">Dormir</string>
    <string name="pref64">Se reposer</string>
    <string name="pref65"> Bien- être</string>
    <string name="pref66">Vas au lit</string>
    <string name="pref67">Fais la cuisine</string>
    <string name="pref68">Essaie de parler avec les amis sur les réseaux sociaux</string>
    <string name="pref69">Bois un peu de café</string>
    <string name="pref60">Bois un peu de bière</string>
    <string name="pref601">Bois un peu de whisky</string>
    <string name="conditionTitle">Condition de manipulation des données personnels</string>
    <string name="conditionSwitch">J\'accepte</string>
    <string name="action_about">Information sur l\'app</string>
    <string name="nomDeBot">Nom d\'appelation de votre ami de conversation.</string>
    <string name="acceptCondition">Accepter les condition pour parler.</string>
    <string name="defaultMessage">Salut, je suis ton bot ami fidele. Comment tu vas aujourd\'hui?
    </string>
    <string name="editMessageHint">Entrez votre message</string>
    <string name="noConnexion">Veuillez vous connecter sur internet</string>
    <string name="conditionText">la protection des données est une priorité de premier ordre pour nous. C\’est pourquoi
        nous informons nos utilisateurs de la finalité du traitement. Les données personnelles sont toutes les
        informations se rapportant à une personne physique identifiée ou identifiable (p. ex. son nom, son adresse, son
        numéro de téléphone, sa date de naissance ou encore son adresse e-mail).
        S\’il y a lieu, nous demandons le consentement des utilisateurs. Aucune de vos données ne sont transférés
        ailleurs, uniquement dans votre appareil mobile pour vous fournir de suggestions correspondant à ce que vous
        nous communiquez via l\'application.
        Nous ne vendons jamais les données.
    </string>
    <string name="language_setting">Langues</string>

    <!-- Language select dialog -->
    <string-array name="lang_select">
        <item>EN</item>
        <item>FR</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

