<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.hesso.feelme.MainActivity">



    <item
            android:id="@+id/action_user"
            android:orderInCategory="200"
            android:title="@string/btn_user"
            android:icon="@drawable/user"
            app:showAsAction="ifRoom" android:visible="true"/>


    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_confidentiality"
          android:title="@string/action_confidentiality"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
