<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CCActivity">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conditionTitle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
            />
            <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/conditionText"
                />
            </android.support.v4.widget.NestedScrollView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/conditionSwitch"
                        android:focusedByDefault="true"
                        android:text="@string/conditionSwitch"
                />
            </LinearLayout>
        </LinearLayout>
</android.support.constraint.ConstraintLayout>